# avx-fiddle

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: build.yml  clang-format.yml
AVXIsNotFun/: AVXIsNotFun.cpp  CMakeLists.txt  common.h
avx-fiddle/: AVX2Grayscale.cpp  CMakeLists.txt  Grayscale.h  ScalarGrayscale.cpp  avx-fiddle.cpp
avx-fiddle/gaussian_blur/: gaussian_blur.cpp  gaussian_blur.h  gaussian_coefficient.cpp  gaussian_coefficient.h  gaussian_horizontal_pass.cpp  gaussian_horizontal_pass.h  gaussian_utils.cpp  gaussian_utils.h  gaussian_vertical_pass.cpp  gaussian_vertical_pass.h
